objects/Development_Component__c.object
<CustomObject>
    <description>TOOLKIT - Used to track all development components created/modified for related request</description>
    <fields>
        <fullName>ComponentName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Component Name</label>
        <length>150</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Component_Type__c</fullName>
        <label>Component Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Apex Class</fullName>
                </value>
                <value>
                    <fullName>Apex Trigger</fullName>
                </value>
                <value>
                    <fullName>App</fullName>
                </value>
                <value>
                    <fullName>Approval Process</fullName>
                </value>
                <value>
                    <fullName>Assignment Rule</fullName>
                </value>
                <value>
                    <fullName>Auto-Response Rule</fullName>
                </value>
                <value>
                    <fullName>Compact Layout</fullName>
                </value>
                <value>
                    <fullName>Custom Button</fullName>
                </value>
                <value>
                    <fullName>Custom Field</fullName>
                </value>
                <value>
                    <fullName>Custom Label</fullName>
                </value>
                <value>
                    <fullName>Custom Link</fullName>
                </value>
                <value>
                    <fullName>Custom Object</fullName>
                </value>
                <value>
                    <fullName>Custom Setting</fullName>
                </value>
                <value>
                    <fullName>Dashboard</fullName>
                </value>
                <value>
                    <fullName>DataRaptor</fullName>
                </value>
                <value>
                    <fullName>Document</fullName>
                </value>
                <value>
                    <fullName>Duplicate Rule</fullName>
                </value>
                <value>
                    <fullName>Email Template</fullName>
                </value>
                <value>
                    <fullName>FlexiPage</fullName>
                </value>
                <value>
                    <fullName>Global Action</fullName>
                </value>
                <value>
                    <fullName>Global Pick List</fullName>
                </value>
                <value>
                    <fullName>Lightning Component</fullName>
                </value>
                <value>
                    <fullName>Lightning Page</fullName>
                </value>
                <value>
                    <fullName>List View</fullName>
                </value>
                <value>
                    <fullName>OmniScript</fullName>
                </value>
                <value>
                    <fullName>Page Layout</fullName>
                </value>
                <value>
                    <fullName>Permission Set</fullName>
                </value>
                <value>
                    <fullName>Post Deployment</fullName>
                </value>
                <value>
                    <fullName>Pre Deployment</fullName>
                </value>
                <value>
                    <fullName>Process Builder</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Request__c</fullName>
        <label>Request</label>
        <referenceTo>Request__c</referenceTo>
        <relationshipLabel>Development Components</relationshipLabel>
        <relationshipName>Development_Components</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Stage</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Development Component</label>
    <nameField>
        <displayFormat>DC-{000}</displayFormat>
        <label>Development Component Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Development Components</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>